--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -136,7 +136,9 @@
     <Compile Include="Models\Emails\EmailIncomingSettings.cs" />
     <Compile Include="Models\Emails\EmailOutgoingSettings.cs" />
     <Compile Include="Models\Emails\EmailSettingsDto.cs" />
+    <Compile Include="Models\WorkflowArtifact.cs" />
     <Compile Include="Models\WorkflowProjectArtifacts.cs" />
+    <Compile Include="Models\WorkflowProjectArtifactsDTO.cs" />
     <Compile Include="Models\Workflow\IeUsersGroups.cs" />
     <Compile Include="Models\Workflow\WorkflowDetailsDto.cs" />
     <Compile Include="Services\Email\EmailClientExceptionHandler.cs" />
