--- a/svc/SearchService.Tests/SearchService.Tests.csproj
+++ b/svc/SearchService.Tests/SearchService.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SqlItemSearchRepositoryTests.cs" />
     <Compile Include="Repositories\SqlProjectSearchRepositoryTests.cs" />
+    <Compile Include="Services\SemanticSearchServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
