--- a/svc/SearchService/SearchService.csproj
+++ b/svc/SearchService/SearchService.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\SemanticSearchEngine.cs" />
     <Compile Include="Models\SemanticSearchSetting.cs" />
+    <Compile Include="Models\SqlSemanticSearchSetting.cs" />
     <Compile Include="Models\SemanticSearchSuggestionParameters.cs" />
     <Compile Include="Models\SuggestionsSearchCriteria.cs" />
     <Compile Include="Models\SuggestionsSearchResult.cs" />
