--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -136,9 +136,9 @@
     <Compile Include="Models\Emails\EmailOutgoingSettings.cs" />
     <Compile Include="Models\Emails\EmailSettingsDto.cs" />
     <Compile Include="Models\SyncResult.cs" />
-    <Compile Include="Models\WorkflowArtifact.cs" />
+    <Compile Include="Models\WorkflowArtifactType.cs" />
     <Compile Include="Models\WorkflowProjectArtifactType.cs" />
-    <Compile Include="Models\WorkflowProjectArtifactTypeDto.cs" />
+    <Compile Include="Models\WorkflowProjectArtifactTypesDto.cs" />
     <Compile Include="Models\Workflow\IeUsersGroups.cs" />
     <Compile Include="Models\Workflow\WorkflowDetailsDto.cs" />
     <Compile Include="Services\Email\EmailClientExceptionHandler.cs" />
