--- a/svc/ConfigControl.Tests/packages.config
+++ b/svc/ConfigControl.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Moq" version="4.7.99" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
 </packages>
