--- a/svc/SearchService.Tests/packages.config
+++ b/svc/SearchService.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="Moq" version="4.7.99" targetFramework="net452" />
   <package id="NEST" version="5.5.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
 </packages>
