--- a/svc/lib/HtmlLibrary.Tests/packages.config
+++ b/svc/lib/HtmlLibrary.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="4.1.1" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.5.5" targetFramework="net452" />
   <package id="Moq" version="4.7.99" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
 </packages>
