--- a/svc/lib/Logging.Database/packages.config
+++ b/svc/lib/Logging.Database/packages.config
@@ -4,4 +4,5 @@
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
 </packages>
