--- a/svc/lib/ServiceLibrary/packages.config
+++ b/svc/lib/ServiceLibrary/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net452" />
 </packages>
