--- a/win_svc/BluePrintSys.Messaging.CrossCutting/packages.config
+++ b/win_svc/BluePrintSys.Messaging.CrossCutting/packages.config
@@ -6,4 +6,5 @@
   <package id="NServiceBus.RabbitMQ" version="4.3.3" targetFramework="net452" />
   <package id="NServiceBus.SqlServer" version="3.1.2" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net452" developmentDependency="true" />
 </packages>
