--- a/svc/SearchService/Web.config
+++ b/svc/SearchService/Web.config
@@ -10,7 +10,7 @@
     <add key="SearchTimeout" value="120" />
   </appSettings>
   <connectionStrings>
-    <add name="Blueprint" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+    <add name="RaptorMain" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=raptor;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <system.web>
     <httpModules>
