--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Models\WorkflowArtifactType.cs" />
     <Compile Include="Models\WorkflowProjectArtifactType.cs" />
     <Compile Include="Models\WorkflowProjectArtifactTypesDto.cs" />
+    <Compile Include="Models\WorkflowProjectSearch.cs" />
     <Compile Include="Models\Workflow\IeUsersGroups.cs" />
     <Compile Include="Models\Workflow\WorkflowDetailsDto.cs" />
     <Compile Include="Models\Workflow\UpdateWorkflowDto.cs" />
