--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Repositories\SqlAttachmentsRepositoryTests.cs" />
     <Compile Include="Repositories\SqlReviewsRepositoryTests.cs" />
     <Compile Include="Repositories\Workflow\SqlWorkflowRepositoryTests.cs" />
+    <Compile Include="Services\ReviewServiceTests.cs" />
     <Compile Include="Services\VersionControlServiceTests.cs" />
     <Compile Include="Services\WorkflowServiceUnitTests.cs" />
   </ItemGroup>
