--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -371,7 +371,7 @@
     <Compile Include="Repositories\Files\IFileRepository.cs" />
     <Compile Include="Repositories\InstanceSettings\IInstanceSettingsRepository.cs" />
     <Compile Include="Repositories\InstanceSettings\SqlInstanceSettingsRepository.cs" />
-    <Compile Include="Repositories\ISqlArtifactRepository.cs" />
+    <Compile Include="Repositories\IArtifactRepository.cs" />
     <Compile Include="Repositories\ISqlItemInfoRepository.cs" />
     <Compile Include="Repositories\IUsersRepository.cs" />
     <Compile Include="Repositories\IVersionControlService.cs" />
@@ -390,7 +390,7 @@
     <Compile Include="Repositories\Reuse\IReuseRepository.cs" />
     <Compile Include="Repositories\Reuse\SqlReuseRepository.cs" />
     <Compile Include="Repositories\SqlArtifactPermissionsRepository.cs" />
-    <Compile Include="Repositories\SqlArtifactRepository.cs" />
+    <Compile Include="Repositories\ArtifactRepository.cs" />
     <Compile Include="Helpers\ExceptionHelper.cs" />
     <Compile Include="Repositories\SqlBaseArtifactRepository.cs" />
     <Compile Include="Repositories\SqlConnectionWrapper.cs" />
