--- a/svc/AdminStore.Tests/AdminStore.Tests.csproj
+++ b/svc/AdminStore.Tests/AdminStore.Tests.csproj
@@ -159,7 +159,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <AdditionalFiles Include="..\..\stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
