--- a/svc/ConfigControl/ConfigControl.csproj
+++ b/svc/ConfigControl/ConfigControl.csproj
@@ -126,7 +126,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="doc\ConfigControl Web Service API - Swagger.URL" />
-    <AdditionalFiles Include="stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
