--- a/svc/FileStore/FileStore.csproj
+++ b/svc/FileStore/FileStore.csproj
@@ -127,7 +127,9 @@
     <Content Include="doc\FileStore Web Service API - Swagger.URL" />
     <Content Include="doc\FileStore Web Service API.docx" />
     <Content Include="doc\FileStore Web Service Design.docx" />
-    <AdditionalFiles Include="stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
