--- a/svc/SearchService.Tests/SearchService.Tests.csproj
+++ b/svc/SearchService.Tests/SearchService.Tests.csproj
@@ -104,7 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <AdditionalFiles Include="stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib\ServiceLibrary.Tests\ServiceLibrary.Tests.csproj">
