--- a/svc/SearchService/SearchService.csproj
+++ b/svc/SearchService/SearchService.csproj
@@ -95,7 +95,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="doc\SearchService Web Service API - Swagger.URL" />
-    <AdditionalFiles Include="stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
