--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -90,7 +90,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <AdditionalFiles Include="stylecop.json" />
+    <AdditionalFiles Include="..\..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\svc\lib\ServiceLibrary\ServiceLibrary.csproj">
