Adds stylecop.json to all projects in WindowsServices

--- a/win_svc/BlueprintSys.RC.ImageService/BlueprintSys.RC.ImageService.csproj
+++ b/win_svc/BlueprintSys.RC.ImageService/BlueprintSys.RC.ImageService.csproj
@@ -190,6 +190,9 @@
     <Compile Include="Transport\NServiceBusServer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
