--- a/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
+++ b/win_svc/BlueprintSys.RC.Services/BlueprintSys.RC.Services.csproj
@@ -162,6 +162,9 @@
     <Compile Include="Repositories\NotificationRepository.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
