--- a/win_svc/BluePrintSys.Messaging.Models/BluePrintSys.Messaging.Models.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models/BluePrintSys.Messaging.Models.csproj
@@ -78,6 +78,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
