--- a/win_svc/BlueprintSys.RC.ImageService.Tests/BlueprintSys.RC.ImageService.Tests.csproj
+++ b/win_svc/BlueprintSys.RC.ImageService.Tests/BlueprintSys.RC.ImageService.Tests.csproj
@@ -135,6 +135,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json">
+      <Link>stylecop.json</Link>
+    </AdditionalFiles>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
