[STOR-1169] Server implementation started

--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\Review\ParticipantArtifactStats.cs" />
     <Compile Include="Helpers\ReuseSystemPropertiesMap.cs" />
     <Compile Include="Models\Review\ReviewApprovalCheckArtifacts.cs" />
+    <Compile Include="Models\Review\ReviewChangeItemsStatusResult.cs" />
     <Compile Include="Models\Review\ReviewArtifactApprovalResult.cs" />
     <Compile Include="Models\Review\ReviewArtifactId.cs" />
     <Compile Include="Models\Review\ReviewArtifactsQueryResult.cs" />
