[STOR-1944] Participant endpoint now returns possible meaning of signatures for participants

--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\SensitivityCommonHelper.cs" />
     <Compile Include="Helpers\WorkflowEventsMessagesHelper.cs" />
+    <Compile Include="Models\DropdownItem.cs" />
     <Compile Include="Models\Review\ParticipantArtifactStats.cs" />
     <Compile Include="Helpers\ReuseSystemPropertiesMap.cs" />
     <Compile Include="Models\Review\ReviewApprovalCheckArtifacts.cs" />
