[STOR-2846] Changing a reviewer to an approver will now set meaning of signature values in an MoS enabled review

--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Repositories\VersionControl\SqlVersionControlRepository.cs" />
     <Compile Include="Executors\StateChangeExecutor.cs" />
     <Compile Include="Services\Reviews\IReviewsService.cs" />
+    <Compile Include="Services\Reviews\MeaningOfSignature\IMeaningOfSignatureUpdateStrategy.cs" />
+    <Compile Include="Services\Reviews\MeaningOfSignature\MeaningOfSignatureUpdate.cs" />
+    <Compile Include="Services\Reviews\MeaningOfSignature\MeaningOfSignatureUpdateSetDefaultsStrategy.cs" />
+    <Compile Include="Services\Reviews\MeaningOfSignature\MeaningOfSignatureUpdateSpecificStrategy.cs" />
     <Compile Include="Services\Reviews\ReviewsService.cs" />
     <Compile Include="Services\VersionControl\VersionControlService.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
